# FaithfulFountain

./: .clangd  .gitignore  .vimspector.json  CMakeLists.txt  Ideas.md  LicenseHeaders.txt  README.md  Taskfile.dist.yaml
ff-asset-builder/: CMakeLists.txt  Directory.xsd
ff-asset-builder/include/ff-asset-builder/: AssetBuilder.hpp  AudioBuildTarget.hpp  BuildSource.hpp  BuildStep.hpp  BuildTarget.hpp  GLShaderFunctionBuildStep.hpp  GLShaderLibraryBuildTarget.hpp  MSDFBitmapFontBuildTarget.hpp  MaterialBuildTarget.hpp  MetalShaderFunctionBuildStep.hpp  MetalShaderLibraryBuildTarget.hpp  ModelBuildTarget.hpp  RawBuildTarget.hpp  ShaderDefinition.hpp  ShaderFunctionBinding.hpp  SimpleTextureBuildTarget.hpp  TextureAtlasBuildTarget.hpp  TextureBuildSource.hpp  TextureRegionBuildTarget.hpp
ff-asset-builder/src/: AssetBuilder.cpp  AudioBuildTarget.cpp  BuildSource.cpp  BuildStep.cpp  BuildTarget.cpp  CMakeLists.txt  CVarDefaults.cpp  GLShaderFunctionBuildStep.cpp  GLShaderLibraryBuildTarget.cpp  MSDFBitmapFontBuildTarget.cpp  MaterialBuildTarget.cpp  MetalShaderFunctionBuildStep.cpp  MetalShaderLibraryBuildTarget.cpp  ModelBuildTarget.cpp  RawBuildTarget.cpp  SimpleTextureBuildTarget.cpp  TextureAtlasBuildTarget.cpp  TextureBuildSource.cpp  TextureRegionBuildTarget.cpp  entry.cpp  main.cpp
ff-audio-coreaudio/: CMakeLists.txt
ff-audio-coreaudio/include/ff-audio-coreaudio/: CAAudioBackend.hmm
ff-audio-coreaudio/src/: CAAudioBackend.mm  CMakeLists.txt
ff-audio-oboe/: CMakeLists.txt
ff-audio-oboe/include/ff-audio-oboe/: OboeAudioBackend.hpp
ff-audio-oboe/src/: CMakeLists.txt  CVarDefaults.cpp  OboeAudioBackend.cpp
ff-audio-portaudio/: CMakeLists.txt
ff-audio-portaudio/include/ff-audio-portaudio/: PAAudioBackend.hpp
ff-audio-portaudio/src/: CMakeLists.txt  PAAudioBackend.cpp
ff-core/: CMakeLists.txt
ff-core/include/ff/: BackendIncludes.inc  BackendProvider.inc  CVars.hpp  CommandLineOptions.hpp  Console.hpp  Game.hpp  GameServicer.hpp  Locator.hpp  entry.hpp
ff-core/src/: CMakeLists.txt  CVarDefaults.cpp  CVars.cpp  CommandLineOptions.cpp  Console.apple.mm  Console.cpp  Game.cpp  GameServicer.cpp  Locator.cpp
ff-core/src/actors/: Actor.cpp  ActorDestructionProcess.cpp  ActorManager.cpp  CMakeLists.txt  Component.cpp  ComponentMaskSet.cpp  Family.cpp  FamilyActorSet.cpp  IterableActorSet.cpp
ff-core/src/animation/: AnimationProcess.cpp  CMakeLists.txt  CameraZoomAnimation.cpp
ff-core/src/assets/: CMakeLists.txt  DirectoryAssetBundle.cpp  IAssetBundle.cpp
ff-core/src/audio/: Audio.cpp  AudioCore.cpp  AudioProcess.cpp  CMakeLists.txt  IAudioBackend.cpp  OggAudioSource.cpp
ff-core/src/common/: CMakeLists.txt  Reloadable.cpp
ff-core/src/components/: CMakeLists.txt  Collision2DComponent.cpp  TransformComponent.cpp
ff-core/src/debug/: CMakeLists.txt  Statistics.cpp
ff-core/src/dev/: CMakeLists.txt  CommonCmdCore.cpp  DevToolsCore.cpp  ImGuiCore.cpp
ff-core/src/directors/: CMakeLists.txt  ClearConsoleDirector.cpp  DebugCameraDirector.cpp  GamepadAutoAssignmentDirector.cpp  PerspectSceneCamera.cpp  PreserveCVarsDirector.cpp
ff-core/src/env/: CMakeLists.txt  StdDataStorage.cpp
ff-core/src/graphics/: BitmapFont.cpp  BufferFormats.cpp  CMakeLists.txt  Camera.cpp  CameraManager.cpp  ClearColor.cpp  Color.cpp  DeferredBlitPass.cpp  FullscreenRenderTarget.cpp  GPUInfo.cpp  IBlitPass.cpp  IDepthStencilState.cpp  IGraphicsDevice.cpp  IRenderPass.cpp  IRenderState.cpp  ISamplerState.cpp  IVertexDescriptor.cpp  IdentityTextureSource.cpp  IndexBuffer.cpp  Material.cpp  ModelData.cpp  NullTextureSource.cpp  OrthoSceneCamera.cpp  OrthographicCamera.cpp  PPQuad.cpp  PerspectiveCamera.cpp  RenderCore.cpp  ShaderFunctionBindingType.cpp  Texture.cpp  TextureData.cpp  TextureRegion.cpp  UniformBuffer.cpp  VertexBuffer.cpp
ff-core/src/io/: BinaryMemory.cpp  BinaryReader.cpp  BinaryWriter.cpp  ByteSerializer.cpp  CMakeLists.txt  CmdRegistrar.cpp  GLMSerializers.cpp  INIFile.cpp  MetadataSerializer.cpp  Serializer.cpp  StreamBinaryReader.cpp  StreamBinaryWriter.cpp  StringSerializer.cpp
ff-core/src/math/: CMakeLists.txt  Circle.cpp  Easings.cpp  Frustum.cpp  IRandom.cpp  MatrixHelper.cpp  Plane.cpp  Rectangle.cpp  StdRandom.cpp
ff-core/src/messages/: CMakeLists.txt  CmdHandler.cpp  EventListener.cpp  MessageBus.cpp
ff-core/src/processes/: BufferProcess.cpp  CMakeLists.txt  DelegateProcess.cpp  (+7 more)
ff-core/tests/: CMakeLists.txt  entry.cpp
ff-graphics-metal/: CMakeLists.txt
ff-graphics-metal/src/: CMakeLists.txt  MetalBlendStateHelpers.mm  MetalBlitPass.mm  MetalBuffer.mm  MetalBufferFormats.mm  MetalDepthStencilState.mm  MetalGraphicsDevice.mm  MetalLibrary.mm  MetalRenderPass.mm  MetalRenderState.mm  MetalSamplerState.mm  MetalShader.mm  MetalShaderLibrary.mm  MetalTextureImp.mm  MetalVertexDescriptor.mm
ff-graphics-opengl/: CMakeLists.txt
ff-graphics-opengl/src/: CMakeLists.txt  CVarDefaults.cpp  GLBlendStateHelpers.cpp  GLBlitPass.cpp  GLBuffer.cpp  GLBufferFormats.cpp  GLDepthStencilState.cpp  GLFramebuffer.cpp  GLFramebufferManager.cpp  GLGlobalState.cpp  GLGraphicsDevice.cpp  GLIndexBufferImp.cpp  GLRenderPass.cpp  GLRenderState.cpp  GLSamplerState.cpp  GLShader.cpp  GLShaderFunction.cpp  GLShaderLibrary.cpp  GLTextureImp.cpp  GLUniformBufferImp.cpp  GLVertexBufferImp.cpp  GLVertexDescriptor.cpp  gl.cpp
ff-ios/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  CVarDefaults.cpp  LaunchScreen.storyboard  Main.storyboard  ViewController.h  ViewController.mm  iOSEnvironment.hmm  iOSEnvironment.mm  iOSGameLoop.hmm  iOSGameLoop.mm  iOSMotionEventTransmitter.hmm  iOSMotionEventTransmitter.mm  main.m  plist.in
ff-sdl2/: CMakeLists.txt  ff-sdl2.entitlements
ff-sdl2/src/: CMakeLists.txt  CVarDefaults.cpp  SDLConsole.cpp  SDLEnvironment.cpp  SDLEnvironment.mm  SDLGameLoop.cpp  SDLGamepadManager.cpp  SDLWindow.cpp  main.inc  main.mm
ff-support-apple/: CMakeLists.txt
ff-support-apple/src/: CMakeLists.txt  Helpers.mm  NSBundleAssetBundle.mm
ff-support-desktop/: CMakeLists.txt
ff-support-desktop/src/: CMakeLists.txt  DesktopEnvironment.cpp  DesktopEnvironment.mm
(+370 files in other folders)
